updated form css

--- a/bit-ed-website/index.html
+++ b/bit-ed-website/index.html
@@ -12,7 +12,7 @@
     <header>
         <nav>
             <ul class="navlist">
-                <a href="index.html"><h1>Bit/Ed</h1><a>
+                <a href="index.html">Bit/Ed<a>
                 <li class="navlink"><a href="index.html">Home</a></li>
                 <li class="navlink"><a href="./pages/about.html">About</a></li>
                 <li class="navlink"><a href="./pages/donate.html">Donate</a></li>
@@ -28,8 +28,16 @@
 
         </p>
         <h2>Sign Up:</h2>
-        <input type="text" placeholder="Enter Email" name="email" required>
-        <button type="submit" class="signupbtn">Sign Up</button>
+        <form>
+            <input type="text" placeholder="Enter Email" name="email" required> 
+            <button type="submit" class="signupbtn">Sign Up</button>
+        </form>
+        <!-- <input type="text" placeholder="Enter Email" name="email" required> -->
+        <!-- <button type="submit" class="signupbtn">Sign Up</button> -->
+    </div>
+
+    <div class="news-section">
+      
     </div>
 
     </body>
